fixes and retries for issues

--- a/roles/capi-cluster/workload/templates/openstack-cluster-config.yml.j2
+++ b/roles/capi-cluster/workload/templates/openstack-cluster-config.yml.j2
@@ -16,3 +16,4 @@ CONTROL_PLANE_MACHINE_COUNT: "{{ cluster_control_plane_count }}"
 WORKER_MACHINE_COUNT: "{{ cluster_worker_count }}"
 CLUSTER_NODE_CIDR: "{{ cluster_node_cidr }}"
 CLUSTER_POD_CIDR: "{{ cluster_pod_cidr }}"
+CLUSTER_NETWORK: "{{ cluster_network }}"
