--- a/roles/capi-cluster/workload/templates/openstack-cluster-config.yml.j2
+++ b/roles/capi-cluster/workload/templates/openstack-cluster-config.yml.j2
@@ -16,4 +16,6 @@ CONTROL_PLANE_MACHINE_COUNT: "{{ cluster_control_plane_count }}"
 WORKER_MACHINE_COUNT: "{{ cluster_worker_count }}"
 CLUSTER_NODE_CIDR: "{{ cluster_node_cidr }}"
 CLUSTER_POD_CIDR: "{{ cluster_pod_cidr }}"
-CLUSTER_NETWORK: "{{ cluster_network }}"
+CLUSTER_NETWORK_ID: "{{ network_id }}"
+CLUSTER_ROUTER_ID: "{{ router_id }}"
+DEFAULT_SECURITY_GROUP_ID: "{{ default_security_group_id }}"
