--- a/roles/capi-cluster/workload/templates/cluster-template.yml.j2
+++ b/roles/capi-cluster/workload/templates/cluster-template.yml.j2
@@ -20,8 +20,8 @@ spec:
         nodeRegistration:
           kubeletExtraArgs:
             cloud-provider: external
-            provider-id: openstack:///'{{ instance_id }}'
-          name: '{{ local_hostname  }}'
+            provider-id: openstack:///'{{ '{{' }} instance_id {{ '}}' }}'
+          name: '{{ '{{' }} local_hostname {{ '}}' }}'
 ---
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: Cluster
@@ -84,14 +84,14 @@ spec:
       nodeRegistration:
         kubeletExtraArgs:
           cloud-provider: external
-          provider-id: openstack:///'{{ instance_id }}'
-        name: '{{ local_hostname }}'
+          provider-id: openstack:///'{{ '{{' }} instance_id {{ '}}' }}'
+        name: '{{ '{{' }} local_hostname {{ '}}' }}'
     joinConfiguration:
       nodeRegistration:
         kubeletExtraArgs:
           cloud-provider: external
-          provider-id: openstack:///'{{ instance_id }}'
-        name: '{{ local_hostname }}'
+          provider-id: openstack:///'{{ '{{' }} instance_id {{ '}}' }}'
+        name: '{{ '{{' }} local_hostname {{ '}}' }}'
   machineTemplate:
     infrastructureRef:
       apiVersion: infrastructure.cluster.x-k8s.io/v1alpha7
@@ -115,11 +115,11 @@ spec:
   identityRef:
     kind: Secret
     name: ${CLUSTER_NAME}-cloud-config
-  managedSecurityGroups: true
+  managedSecurityGroups: {{ capi_managed_secgroups }}
   network:
-    name: ${CLUSTER_NETWORK}
+    name: {{ cluster_network }}
   router: 
-    name: ${CLUSTER_NETWORK}
+    name: {{ cluster_network }}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha7
 kind: OpenStackMachineTemplate
@@ -137,9 +137,12 @@ spec:
       sshKeyName: ${OPENSTACK_SSH_KEY_NAME}
       securityGroups:
       - name: default
+{% if capi_managed_secgroups == false %}
+      - name: k8s-cluster-default-{{ cluster_name }}-secgroup-controlplane
+{% endif %}
       ports:
       - network:
-          name: ${CLUSTER_NETWORK}
+          name: {{ cluster_network }}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1alpha7
 kind: OpenStackMachineTemplate
@@ -157,6 +160,9 @@ spec:
       sshKeyName: ${OPENSTACK_SSH_KEY_NAME}
       securityGroups:
       - name: default
+{% if capi_managed_secgroups == false %}
+      - name: k8s-cluster-default-{{ cluster_name }}-secgroup-worker
+{% endif %}
       ports:
       - network:
-          name: ${CLUSTER_NETWORK}
+          name: {{ cluster_network }}
